--- a/404.md
+++ b/404.md
@@ -3,6 +3,9 @@ layout: p404
 permalink: /404.html
 ---
 
-![Page not found](/images/404_pageNotFound.jpg){:class="img-responsive"}
+<div class="container404"></div>
+<!--![Page not found](/images/404_pageNotFound.jpg){:class="img-responsive"}-->
 
-Sorry that page doesn't exist you can go to the [main page ](/)
+<div class="a-page">
+    Sorry that page doesn't exist you can go to the <a href="/">Main Page</a>
+</div>
