--- a/_pages/podcast-episodes/ep-043.md
+++ b/_pages/podcast-episodes/ep-043.md
@@ -2,7 +2,7 @@
 layout: podcast
 permalink: /podcast/episode/043
 title: "Chris Hardie a Senior Software Engineer at Automattic (wordpress.com)"
-subtitle: "From entrepreneur to engineer Automattic"
+subtitle: "From entrepreneur to engineer at Automattic"
 label: "Guest Chris Hardie tells us about his very interesting journey he was an entrepreneur for over 16 years, is now working on Special Projects at Automattic makers of wordpress.com. Hear about what it was like starting his company, many of the things he learned along the way and his transition to working for a great company.  <br> <br> <a href='https://twitter.com/ChrisHardie'>https://twitter.com/ChrisHardie</a> <br> <a href='https://chrishardie.com/'>https://chrishardie.com/</a> <br> <a href='https://www.linkedin.com/in/chrishardie/'>https://www.linkedin.com/in/chrishardie/</a> "
 date: Tue, 10 Sep 2019 04:20:54 GMT
 duration: "00:55:59"
