target _blank fixes

--- a/_pages/podcast-episodes/ep-009.md
+++ b/_pages/podcast-episodes/ep-009.md
@@ -6,7 +6,7 @@ title: "Guest Dermot Casey | NDRC, Startups, Accelerator Programmes"
 subtitle: "Dermot Casey and I discussing the NDRC, startups and accelerator programmes"
 label: "Dermot sources startup investment opportunities and with cash and acceleration mentor them through to securing early customers and follow-on investment.
 
-You can find Dermot on <a href='https://www.linkedin.com/in/dermotcasey/'>LinkedIn</a> and <a href='https://twitter.com/dermotcasey'>Twitter</a>
+You can find Dermot on <a href='https://www.linkedin.com/in/dermotcasey/' target='_blank'>LinkedIn</a> and <a href='https://twitter.com/dermotcasey' target='_blank'>Twitter</a>
 "
 date: Mon, 21 Nov 2018 04:30:54 GMT
 duration: "46:47"
