--- a/_pages/podcast-episodes/ep-041.md
+++ b/_pages/podcast-episodes/ep-041.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/041
 title: "Interested in shifting into a career as a Web Developer/freelancer? Raddevon is a resource for you."
 subtitle: "Devon Campbell created Raddevon and is a Web Developer"
-label: "Guest Devon Campbell talks to us about switching career to be a freelance Web Developer, and creating a resource for others to do the same.  He also gives free mentoring sessions to help people with the preperation and transition.  <br> <br> <a href='https://raddevon.com'>https://raddevon.com</a> <br> <a href='https://twitter.com/raddevon'>https://twitter.com/raddevon</a> <br> <a href='https://www.linkedin.com/in/raddevon/'>https://www.linkedin.com/in/raddevon/</a> "
+label: "Guest Devon Campbell talks to us about switching career to be a freelance Web Developer, and creating a resource for others to do the same.  He also gives free mentoring sessions to help people with the preperation and transition.  <br> <br> <a href='https://raddevon.com' target='_blank'>https://raddevon.com</a> <br> <a href='https://twitter.com/raddevon' target='_blank'>https://twitter.com/raddevon</a> <br> <a href='https://www.linkedin.com/in/raddevon/' target='_blank'>https://www.linkedin.com/in/raddevon/</a> "
 date: Tue, 03 Sep 2019 04:20:54 GMT
 duration: "00:50:48"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/041-Devon-Campbell.mp3
