--- a/_pages/podcast-episodes/ep-042.md
+++ b/_pages/podcast-episodes/ep-042.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/042
 title: "JSDayIE: Irelands first single day JavaScript conference"
 subtitle: "Remo H Jansen the organiser of JSDayIE"
-label: "Guest: Remo H Jansen organiser of JSDayIe joins us to discuss open-source contribution, writing a technical book, starting a meetup, and ultimately starting a conference.  <br> <br> Buy your ticket using this discount code:<br>  <a href='https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA'>https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA</a> <br> <br> <a href='https://www.linkedin.com/in/remojansen/'>https://www.linkedin.com/in/remojansen/</a> <br> <a href='https://www.jsday.org/'>https://www.jsday.org/</a> <br> <a href='https://twitter.com/JSDayIE'>https://twitter.com/JSDayIE</a> <br> <a href='https://twitter.com/RemoHJansen'>https://twitter.com/RemoHJansen</a> "
+label: "Guest: Remo H Jansen organiser of JSDayIe joins us to discuss open-source contribution, writing a technical book, starting a meetup, and ultimately starting a conference.  <br> <br> Buy your ticket using this discount code:<br>  <a href='https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA' target='_blank'>https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA</a> <br> <br> <a href='https://www.linkedin.com/in/remojansen/' target='_blank'>https://www.linkedin.com/in/remojansen/</a> <br> <a href='https://www.jsday.org/' target='_blank'>https://www.jsday.org/</a> <br> <a href='https://twitter.com/JSDayIE' target='_blank'>https://twitter.com/JSDayIE</a> <br> <a href='https://twitter.com/RemoHJansen' target='_blank'>https://twitter.com/RemoHJansen</a> "
 date: Thu, 28 Sep 2019 04:20:54 GMT
 duration: "00:39:55"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/042-remo-jansen.mp3
